feat: adding the dashboard #138 #122
